--- a/src/main/resources/ku/cs/register.fxml
+++ b/src/main/resources/ku/cs/register.fxml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Line?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.RegisterController">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.RegisterController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c9ad88" height="768.0" stroke="BLACK" strokeType="INSIDE" width="1024.0" />
       <ImageView fitHeight="615.0" fitWidth="410.0" layoutX="324.0" layoutY="55.0" pickOnBounds="true" preserveRatio="true">
@@ -27,79 +21,111 @@
       </ImageView>
       <Text layoutX="341.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" text="สร้างบัญชี">
          <font>
-            <Font name="Calibri" size="30.0" />
+            <Font name="JasmineUPC" size="36.0" />
          </font>
       </Text>
       <Line endX="178.6666259765625" endY="-1.52587890625E-5" layoutX="504.0" layoutY="106.0" startX="-63.0" startY="-1.52587890625E-5" />
-      <Text fill="#828282" layoutX="382.0" layoutY="544.0" strokeType="OUTSIDE" strokeWidth="0.0" text="เมื่อคลิก สมัคร แสดงว่าคุณยินยอมตามข้อกำหนด">
+      <Text fill="#828282" layoutX="411.0" layoutY="546.0" strokeType="OUTSIDE" strokeWidth="0.0" text="เมื่อคลิก สมัคร แสดงว่าคุณยินยอมตามข้อกำหนด">
          <font>
-            <Font name="Calibri" size="14.0" />
+            <Font name="JasmineUPC" size="14.0" />
          </font>
       </Text>
-      <TextField fx:id="firstNameTextField" layoutX="348.0" layoutY="234.0" prefHeight="25.0" prefWidth="150.0" promptText="ชื่อ" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
-      <TextField fx:id="lastNameTextField" layoutX="521.0" layoutY="234.0" prefHeight="25.0" prefWidth="150.0" promptText="นามสกุล" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
-      <TextField fx:id="userNameTextField" layoutX="348.0" layoutY="288.0" onKeyReleased="#keyUserName" prefHeight="28.0" prefWidth="324.0" promptText="ชื่อผู้ใช้ (username)" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
-      <Text fill="#828282" layoutX="349.0" layoutY="463.0" strokeType="OUTSIDE" strokeWidth="0.0" text="วันเกิด">
+      <TextField fx:id="firstNameTextField" layoutX="348.0" layoutY="244.0" prefHeight="28.0" prefWidth="150.0" promptText="ชื่อ" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
          <font>
-            <Font name="Calibri" size="14.0" />
+            <Font name="JasmineUPC" size="16.0" />
+         </font></TextField>
+      <TextField fx:id="lastNameTextField" layoutX="521.0" layoutY="244.0" prefHeight="28.0" prefWidth="150.0" promptText="นามสกุล" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
+         <font>
+            <Font name="JasmineUPC" size="16.0" />
+         </font></TextField>
+      <TextField fx:id="userNameTextField" layoutX="348.0" layoutY="298.0" onKeyReleased="#keyUserName" prefHeight="28.0" prefWidth="324.0" promptText="ชื่อผู้ใช้ (username)" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
+         <font>
+            <Font name="JasmineUPC" size="16.0" />
+         </font></TextField>
+      <Text fill="#828282" layoutX="349.0" layoutY="473.0" strokeType="OUTSIDE" strokeWidth="0.0" text="วันเกิด">
+         <font>
+            <Font name="JasmineUPC" size="18.0" />
          </font>
       </Text>
-      <TextField fx:id="birthDayTextField" layoutX="347.0" layoutY="474.0" prefHeight="28.0" prefWidth="77.0" promptText="วัน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
-      <TextField fx:id="birthMonthTextField" layoutX="441.0" layoutY="475.0" prefHeight="28.0" prefWidth="125.0" promptText="เดือน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
-      <TextField fx:id="birthYearTextField" layoutX="582.0" layoutY="475.0" prefHeight="28.0" prefWidth="90.0" promptText="ปี (ค.ศ.)" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
+      <TextField fx:id="birthDayTextField" layoutX="348.0" layoutY="484.0" prefHeight="28.0" prefWidth="77.0" promptText="วัน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
+         <font>
+            <Font name="JasmineUPC" size="16.0" />
+         </font></TextField>
+      <TextField fx:id="birthMonthTextField" layoutX="441.0" layoutY="484.0" prefHeight="28.0" prefWidth="125.0" promptText="เดือน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
+         <font>
+            <Font name="JasmineUPC" size="16.0" />
+         </font></TextField>
+      <TextField fx:id="birthYearTextField" layoutX="582.0" layoutY="484.0" prefHeight="28.0" prefWidth="90.0" promptText="ปี (ค.ศ.)" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
+         <font>
+            <Font name="JasmineUPC" size="16.0" />
+         </font></TextField>
       <Text fill="#828282" layoutX="462.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" text="อีกก้าวเดียวเพื่อเข้าสู่โลกใบใหม่">
          <font>
-            <Font name="Calibri" size="14.0" />
+            <Font name="JasmineUPC" size="18.0" />
          </font>
       </Text>
-      <Text fill="#828282" layoutX="402.0" layoutY="566.0" strokeType="OUTSIDE" strokeWidth="0.0" text="นโยบายข้อมูล และนโยบายคุกกี้ของเราแล้ว">
+      <Text fill="#828282" layoutX="424.0" layoutY="567.0" strokeType="OUTSIDE" strokeWidth="0.0" text="นโยบายข้อมูล และนโยบายคุกกี้ของเราแล้ว">
          <font>
-            <Font name="Calibri" size="14.0" />
+            <Font name="JasmineUPC" size="14.0" />
          </font>
       </Text>
       <Button layoutX="454.0" layoutY="581.0" mnemonicParsing="false" onAction="#registerButton" prefHeight="34.0" prefWidth="114.0" style="-fx-background-color: B78748;" text="สมัคร" textFill="WHITE">
          <font>
-            <Font name="Calibri" size="18.0" />
+            <Font name="JasmineUPC" size="18.0" />
          </font>
       </Button>
-      <Text fill="#828282" layoutX="398.0" layoutY="656.0" strokeType="OUTSIDE" strokeWidth="0.0" text="หากคุณมีบัญชีอยู่แล้ว">
+      <Text fill="#828282" layoutX="389.0" layoutY="656.0" strokeType="OUTSIDE" strokeWidth="0.0" text="หากคุณมีบัญชีอยู่แล้ว    |">
          <font>
-            <Font name="Calibri" size="14.0" />
+            <Font name="JasmineUPC" size="16.0" />
          </font>
       </Text>
-      <Text fill="#f28989" layoutX="387.0" layoutY="463.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*วันเกิดจะไม่สามารถแก้ไขได้ในภายหลัง">
+      <Text fill="#f28989" layoutX="387.0" layoutY="473.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*วันเกิดจะไม่สามารถแก้ไขได้ในภายหลัง">
          <font>
-            <Font name="Calibri" size="10.0" />
+            <Font name="JasmineUPC" size="14.0" />
          </font>
       </Text>
-      <Button layoutX="517.0" layoutY="637.0" mnemonicParsing="false" onAction="#handleToLoginButton" style="-fx-background-color: FCFCFC;" text="กลับไปที่หน้าล็อกอิน" textFill="#203bc5">
+      <Button layoutX="511.0" layoutY="640.0" mnemonicParsing="false" onAction="#handleToLoginButton" style="-fx-background-color: FCFCFC;" text="กลับไปที่หน้าล็อกอิน" textFill="#203bc5">
          <font>
-            <Font size="14.0" />
+            <Font name="JasmineUPC" size="16.0" />
          </font>
       </Button>
-      <Label fx:id="userNameCheckLabel" layoutX="349.0" layoutY="316.0" textFill="#d2271e">
+      <Label fx:id="userNameCheckLabel" layoutX="354.0" layoutY="330.0" textFill="#d2271e">
          <font>
-            <Font size="9.0" />
+            <Font name="JasmineUPC" size="13.0" />
          </font></Label>
-      <Label fx:id="passwordConditionCheckLabel" layoutX="349.0" layoutY="378.0" textFill="#d2271e">
+      <Label fx:id="passwordConditionCheckLabel" layoutX="354.0" layoutY="392.0" textFill="#d2271e">
          <font>
-            <Font size="9.0" />
+            <Font name="JasmineUPC" size="13.0" />
          </font></Label>
-      <Label fx:id="passwordCompareLabel" layoutX="349.0" layoutY="425.0" textFill="#d2271e">
+      <Label fx:id="passwordCompareLabel" layoutX="354.0" layoutY="439.0" textFill="#d2271e">
          <font>
-            <Font size="9.0" />
+            <Font name="JasmineUPC" size="13.0" />
          </font></Label>
-      <PasswordField fx:id="passwordField" layoutX="348.0" layoutY="350.0" onKeyReleased="#keyPassword" prefHeight="28.0" prefWidth="324.0" promptText="รหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
-      <PasswordField fx:id="checkPasswordField" layoutX="348.0" layoutY="397.0" onKeyReleased="#keyCheckPassword" prefHeight="28.0" prefWidth="324.0" promptText="ยืนยันรหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
-      <Label fx:id="registerErrorLabel" layoutX="410.0" layoutY="618.0" textAlignment="CENTER" textFill="#d2271e" />
-      <Text fill="#7d7d7d" layoutX="348.0" layoutY="279.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ชื่อผู้ใช้สามารถประกอบด้วยตัวอักษรภาษาอังกฤษและตัวเลข 0-9">
+      <PasswordField fx:id="passwordField" layoutX="348.0" layoutY="360.0" onKeyReleased="#keyPassword" prefHeight="28.0" prefWidth="324.0" promptText="รหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
          <font>
-            <Font name="Calibri" size="10.0" />
+            <Font name="JasmineUPC" size="16.0" />
+         </font></PasswordField>
+      <PasswordField fx:id="checkPasswordField" layoutX="348.0" layoutY="407.0" onKeyReleased="#keyCheckPassword" prefHeight="28.0" prefWidth="324.0" promptText="ยืนยันรหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
+         <font>
+            <Font name="JasmineUPC" size="16.0" />
+         </font></PasswordField>
+      <Label fx:id="registerErrorLabel" layoutX="415.0" layoutY="621.0" textAlignment="CENTER" textFill="#d2271e">
+         <font>
+            <Font name="JasmineUPC" size="14.0" />
+         </font></Label>
+      <Text fill="#7d7d7d" layoutX="349.0" layoutY="292.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ชื่อผู้ใช้สามารถประกอบด้วยตัวอักษรภาษาอังกฤษและตัวเลข 0-9">
+         <font>
+            <Font name="JasmineUPC" size="14.0" />
          </font>
       </Text>
-      <Text fill="#7d7d7d" layoutX="349.0" layoutY="342.0" strokeType="OUTSIDE" strokeWidth="0.0" text="รหัสผ่านต้องประกอบไปด้วยตัวอักษรภาษาอังกฤษและตัวเลข 0-9 มากกว่า 8 หลัก">
+      <Text fill="#7d7d7d" layoutX="349.0" layoutY="354.0" strokeType="OUTSIDE" strokeWidth="0.0" text="รหัสผ่านต้องประกอบด้วยตัวอักษรภาษาอังกฤษและตัวเลข 0-9 มากกว่า 8 หลัก">
          <font>
-            <Font name="Calibri" size="10.0" />
+            <Font name="JasmineUPC" size="14.0" />
+         </font>
+      </Text>
+      <Text fill="#828282" layoutX="345.0" layoutY="234.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ข้อมูลผู้ใช้">
+         <font>
+            <Font name="JasmineUPC" size="18.0" />
          </font>
       </Text>
    </children>
