--- a/src/main/resources/ku/cs/login.fxml
+++ b/src/main/resources/ku/cs/login.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -19,50 +20,45 @@
       <QuadCurve controlX="41.79998779296875" controlY="-98.33331298828125" endX="113.933349609375" endY="-34.333343505859375" fill="#fffae9" layoutX="472.0" layoutY="473.0" startX="-65.3333740234375" startY="-30.066680908203125" stroke="#fffae9" strokeType="INSIDE" />
       <QuadCurve controlX="2.066650390625" controlY="61.4666748046875" endX="113.0" endY="-7.999969482421875" fill="#bc986a" layoutX="930.0" layoutY="438.0" startX="-84.06668090820312" startY="-21.4666748046875" stroke="#bc986a" strokeType="INSIDE" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="576.0" layoutX="573.0" layoutY="100.0" stroke="WHITE" strokeType="INSIDE" width="386.0" />
-      <Label layoutX="738.0" layoutY="127.0" text="Login">
+      <Label layoutX="713.0" layoutY="126.0" text="เข้าสู่ระบบ">
          <font>
-            <Font name="JasmineUPC Bold" size="38.0" />
+            <Font name="JasmineUPC Bold" size="30.0" />
          </font>
       </Label>
       <Line endX="134.933349609375" layoutX="770.0" layoutY="164.0" startX="-137.066650390625" />
-      <Label layoutX="591.0" layoutY="222.0" text="Username">
+      <Label layoutX="591.0" layoutY="222.0" text="ชื่อผู้ใช้">
          <font>
-            <Font name="JasmineUPC" size="25.0" />
+            <Font name="JasmineUPC" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="591.0" layoutY="325.0" text="Password">
+      <Label layoutX="591.0" layoutY="325.0" text="รหัสผ่าน">
          <font>
-            <Font name="JasmineUPC" size="25.0" />
+            <Font name="JasmineUPC" size="24.0" />
          </font>
       </Label>
-      <TextField layoutX="586.0" layoutY="248.0" prefHeight="55.0" prefWidth="358.0" promptText="Your Username" style="-fx-background-color: FFFCF1; -fx-background-radius: 5;">
+      <TextField fx:id="usernameTextField" layoutX="586.0" layoutY="248.0" prefHeight="55.0" prefWidth="358.0" promptText="กรอกชื่อผู้ใช้ของคุณ" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;">
          <font>
-            <Font name="JasmineUPC" size="25.0" />
+            <Font name="JasmineUPC" size="20.0" />
          </font>
       </TextField>
-      <Button layoutX="699.0" layoutY="466.0" mnemonicParsing="false" onAction="#handleToHomeButton" prefHeight="52.0" prefWidth="127.0" style="-fx-background-color: B78748; -fx-background-radius: 30;" text="Login" textAlignment="CENTER" textFill="WHITE">
+      <Button layoutX="699.0" layoutY="466.0" mnemonicParsing="false" onAction="#handleLoginButton" prefHeight="52.0" prefWidth="127.0" style="-fx-background-color: B78748; -fx-background-radius: 20;" text="เข้าสู่ระบบ" textAlignment="CENTER" textFill="WHITE">
          <font>
-            <Font name="JasmineUPC Bold" size="38.0" />
+            <Font name="JasmineUPC Bold" size="24.0" />
          </font>
       </Button>
-      <Button layoutX="691.0" layoutY="522.0" mnemonicParsing="false" style="-fx-background-color: ffffff;" text="Forget your password">
+      <Button layoutX="680.0" layoutY="526.0" mnemonicParsing="false" style="-fx-background-color: ffffff;" text="คุณลืมรหัสผ่านใช่หรือไม่ ?">
          <font>
-            <Font name="JasmineUPC" size="20.0" />
+            <Font name="JasmineUPC" size="18.0" />
          </font></Button>
-      <Label layoutX="642.0" layoutY="634.0" prefHeight="15.0" prefWidth="127.0" text="Doesn't have account?">
+      <Label layoutX="660.0" layoutY="634.0" prefHeight="15.0" prefWidth="106.0" text="คุณยังไม่มีบัญชี ?">
          <font>
-            <Font name="JasmineUPC" size="20.0" />
+            <Font name="JasmineUPC" size="18.0" />
          </font></Label>
-      <Button layoutX="777.0" layoutY="628.0" mnemonicParsing="false" onAction="#handleToRegisterButton" style="-fx-background-color: ffffff;" text="Register here" textFill="RED">
+      <Button layoutX="771.0" layoutY="629.0" mnemonicParsing="false" onAction="#handleToRegisterButton" style="-fx-background-color: ffffff;" text="สร้างบัญชีใหม่" textFill="RED">
          <font>
-            <Font name="JasmineUPC" size="20.0" />
+            <Font name="JasmineUPC" size="18.0" />
          </font></Button>
-      <Line endX="-100.0" endY="18.93328857421875" layoutX="875.0" layoutY="631.0" startX="-100.0" />
-      <TextField layoutX="587.0" layoutY="353.0" prefHeight="55.0" prefWidth="358.0" promptText="Your Password" style="-fx-background-color: FFFCF1; -fx-background-radius: 5;">
-         <font>
-            <Font name="JasmineUPC" size="25.0" />
-         </font>
-      </TextField>
+      <Line endX="-100.0" endY="18.93328857421875" layoutX="868.0" layoutY="632.0" startX="-100.0" />
       <Label layoutX="835.0" layoutY="41.0" text="|   PROMOTION" textFill="WHITE">
          <font>
             <Font name="JasmineUPC Bold" size="28.0" />
@@ -78,7 +74,7 @@
             <Font name="JasmineUPC" size="20.0" />
          </font>
       </Button>
-      <Button layoutX="309.0" layoutY="544.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="137.0" style="-fx-background-color: F99F28; -fx-background-radius: 20;" text="Searching" textFill="WHITE">
+      <Button layoutX="309.0" layoutY="544.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="137.0" style="-fx-background-color: F99F28; -fx-background-radius: 20;" text="ค้นหา" textFill="WHITE">
          <font>
             <Font name="JasmineUPC" size="25.0" />
          </font>
@@ -88,5 +84,15 @@
             <Font name="JasmineUPC Bold" size="28.0" />
          </font>
       </Button>
+      <Label fx:id="errorLabel" layoutX="634.0" layoutY="437.0" text="บัญชีหรือรหัสผ่านไม่ถูกต้อง โปรดตรวจสอบใหม่อีกครั้ง" textFill="WHITE">
+         <font>
+            <Font name="JasmineUPC" size="16.0" />
+         </font>
+      </Label>
+      <PasswordField fx:id="passwordField" layoutX="587.0" layoutY="353.0" prefHeight="55.0" prefWidth="358.0" promptText="กรอกรหัสผ่านของคุณ" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;">
+         <font>
+            <Font name="JasmineUPC" size="20.0" />
+         </font>
+      </PasswordField>
    </children>
 </AnchorPane>
