--- a/src/main/resources/ku/cs/register.fxml
+++ b/src/main/resources/ku/cs/register.fxml
@@ -38,7 +38,7 @@
          <font>
             <Font name="JasmineUPC" size="16.0" />
          </font></TextField>
-      <TextField fx:id="userNameTextField" layoutX="348.0" layoutY="298.0" onKeyReleased="#keyUserName" prefHeight="28.0" prefWidth="324.0" promptText="ชื่อผู้ใช้ (username)" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
+      <TextField fx:id="userNameTextField" layoutX="348.0" layoutY="298.0" onKeyReleased="#handleKeyUserName" prefHeight="28.0" prefWidth="324.0" promptText="ชื่อผู้ใช้ (username)" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
          <font>
             <Font name="JasmineUPC" size="16.0" />
          </font></TextField>
@@ -69,7 +69,7 @@
             <Font name="JasmineUPC" size="14.0" />
          </font>
       </Text>
-      <Button layoutX="454.0" layoutY="581.0" mnemonicParsing="false" onAction="#registerButton" prefHeight="34.0" prefWidth="114.0" style="-fx-background-color: B78748;" text="สมัคร" textFill="WHITE">
+      <Button layoutX="454.0" layoutY="581.0" mnemonicParsing="false" onAction="#handleRegisterButton" prefHeight="34.0" prefWidth="114.0" style="-fx-background-color: B78748;" text="สมัคร" textFill="WHITE">
          <font>
             <Font name="JasmineUPC" size="18.0" />
          </font>
@@ -101,11 +101,11 @@
          <font>
             <Font name="JasmineUPC" size="13.0" />
          </font></Label>
-      <PasswordField fx:id="passwordField" layoutX="348.0" layoutY="360.0" onKeyReleased="#keyPassword" prefHeight="28.0" prefWidth="324.0" promptText="รหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
+      <PasswordField fx:id="passwordField" layoutX="348.0" layoutY="360.0" onKeyReleased="#handleKeyPassword" prefHeight="28.0" prefWidth="324.0" promptText="รหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
          <font>
             <Font name="JasmineUPC" size="16.0" />
          </font></PasswordField>
-      <PasswordField fx:id="checkPasswordField" layoutX="348.0" layoutY="407.0" onKeyReleased="#keyCheckPassword" prefHeight="28.0" prefWidth="324.0" promptText="ยืนยันรหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
+      <PasswordField fx:id="checkPasswordField" layoutX="348.0" layoutY="407.0" onKeyReleased="#handleKeyCheckPassword" prefHeight="28.0" prefWidth="324.0" promptText="ยืนยันรหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
          <font>
             <Font name="JasmineUPC" size="16.0" />
          </font></PasswordField>
