--- a/src/main/resources/ku/cs/home.fxml
+++ b/src/main/resources/ku/cs/home.fxml
@@ -37,7 +37,7 @@
                         </ScrollBar>
                      </children>
                   </HBox>
-                  <GridPane GridPane.rowIndex="2">
+                  <GridPane fx:id="grid" GridPane.rowIndex="2">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
