--- a/src/main/resources/ku/cs/item.fxml
+++ b/src/main/resources/ku/cs/item.fxml
@@ -11,14 +11,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="305.0" prefWidth="180.0" style="-fx-background-color: #fffcf1; -fx-background-radius: 5;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.itemController">
+<AnchorPane prefHeight="305.0" prefWidth="180.0" style="-fx-background-color: #fffcf1; -fx-background-radius: 10;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.itemController">
    <children>
       <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox alignment="CENTER" prefHeight="195.0" prefWidth="178.0">
                <children>
-                  <ImageView fitHeight="150.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="img" fitHeight="150.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
@@ -38,7 +37,7 @@
                         <Font name="JasmineUPC" size="12.0" />
                      </font>
                   </Text>
-                  <Label text="booknameLabel">
+                  <Label fx:id="bookNameLabel" text="booknameLabel">
                      <font>
                         <Font name="JasmineUPC" size="12.0" />
                      </font>
@@ -58,7 +57,7 @@
                         <Insets left="10.0" />
                      </HBox.margin>
                   </Text>
-                  <Label text="bookPriceLabel">
+                  <Label fx:id="bookPriceLabel" text="bookPriceLabel">
                      <font>
                         <Font name="JasmineUPC" size="12.0" />
                      </font>
@@ -78,7 +77,7 @@
                         <Insets left="10.0" />
                      </HBox.margin>
                   </Text>
-                  <Label text="bookAuthorLabel">
+                  <Label fx:id="bookShopLabel" text="bookShopLabel">
                      <font>
                         <Font name="JasmineUPC" size="12.0" />
                      </font>
@@ -90,7 +89,7 @@
             </HBox>
             <HBox alignment="CENTER_RIGHT" prefHeight="38.0" prefWidth="200.0">
                <children>
-                  <Button mnemonicParsing="false" style="-fx-background-color: #e1c272; -fx-background-radius: 5;" text="รายละเอียดเพิ่มเติม" textFill="WHITE">
+                  <Button fx:id="#handleSeeFullDetailButton" mnemonicParsing="false" style="-fx-background-color: #e1c272; -fx-background-radius: 5;" text="รายละเอียดเพิ่มเติม" textFill="WHITE">
                      <font>
                         <Font name="JasmineUPC" size="12.0" />
                      </font>
