--- a/src/main/resources/ku/cs/home.fxml
+++ b/src/main/resources/ku/cs/home.fxml
@@ -15,7 +15,7 @@
    <children>
       <BorderPane layoutX="-1.0" layoutY="1.0" prefHeight="768.0" prefWidth="1024.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
-            <HBox prefHeight="69.0" prefWidth="1024.0" BorderPane.alignment="CENTER" />
+            <HBox fx:id="head" prefHeight="69.0" prefWidth="1024.0" BorderPane.alignment="CENTER" />
          </top>
          <center>
             <GridPane BorderPane.alignment="CENTER">
@@ -37,7 +37,7 @@
                         </ScrollBar>
                      </children>
                   </HBox>
-                  <GridPane fx:id="grid" GridPane.rowIndex="2">
+                  <GridPane GridPane.rowIndex="2">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
