--- a/src/main/resources/ku/cs/headWhenLogin.fxml
+++ b/src/main/resources/ku/cs/headWhenLogin.fxml
@@ -10,10 +10,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="69.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="69.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.HeadController">
    <children>
-      <HBox layoutX="104.0" layoutY="-15.0" prefHeight="69.0" prefWidth="1024.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <HBox fx:id="head1" layoutX="104.0" layoutY="-15.0" prefHeight="69.0" prefWidth="1024.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <ImageView fitHeight="68.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
                <HBox.margin>
@@ -55,7 +54,7 @@
                   <Insets left="70.0" top="15.0" />
                </HBox.margin>
                <graphic>
-                  <Label fx:id="userName" prefHeight="27.0" prefWidth="100.0" text="Username" textFill="WHITE">
+                  <Label fx:id="userNameLabel" prefHeight="27.0" prefWidth="100.0" text="Username" textFill="WHITE">
                      <font>
                         <Font name="JasmineUPC" size="36.0" />
                      </font>
