--- a/src/main/resources/ku/cs/sellerStock.fxml
+++ b/src/main/resources/ku/cs/sellerStock.fxml
@@ -17,7 +17,17 @@
    <children>
       <BorderPane layoutX="-22.0" layoutY="3.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
-            <HBox prefHeight="69.0" prefWidth="1024.0" BorderPane.alignment="CENTER" />
+            <HBox fx:id="hBoxSellerStock" prefHeight="69.0" prefWidth="1024.0" BorderPane.alignment="CENTER">
+               <children>
+                  <GridPane fx:id="gridHead">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                  </GridPane>
+               </children></HBox>
          </top>
          <center>
             <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
