--- a/src/main/resources/ku/cs/aboutUs.fxml
+++ b/src/main/resources/ku/cs/aboutUs.fxml
@@ -14,34 +14,22 @@
             <Font name="JasmineUPC" size="24.0" />
          </font>
       </Button>
-      <VBox layoutX="42.0" layoutY="82.0" prefHeight="200.0" prefWidth="940.0" AnchorPane.bottomAnchor="35.0" AnchorPane.leftAnchor="42.0" AnchorPane.rightAnchor="42.0" AnchorPane.topAnchor="82.0">
-         <children>
-            <HBox prefHeight="250.0" prefWidth="200.0">
-               <children>
-                  <GridPane fx:id="gridHeadChoice" prefHeight="250.0" prefWidth="0.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                  </GridPane>
-               </children></HBox>
-            <HBox prefHeight="30.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
-            <HBox alignment="BOTTOM_LEFT" prefHeight="371.0" prefWidth="200.0">
-               <children>
-                  <GridPane fx:id="gridInfo" prefHeight="371.0" prefWidth="0.0">
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                  </GridPane>
-               </children></HBox>
-         </children>
-      </VBox>
       <Line endX="100.0" layoutX="120.0" layoutY="50.0" rotate="90.0" startX="81.24583435058594" startY="0.41674506664276123" />
       <Button fx:id="adminInfoButton" layoutX="211.0" layoutY="32.0" mnemonicParsing="false" onAction="#handleAdminInfoButton" style="-fx-background-color: transparent;" text="ข้อมูลผู้พัฒนา">
          <font>
             <Font name="JasmineUPC" size="24.0" />
          </font>
       </Button>
+      <HBox alignment="BOTTOM_LEFT" prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="35.0" AnchorPane.leftAnchor="42.0" AnchorPane.rightAnchor="42.0" AnchorPane.topAnchor="82.0">
+         <children>
+            <GridPane fx:id="gridHeadChoice" prefHeight="30.0" prefWidth="46.0">
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
