--- a/src/main/resources/ku/cs/aboutUsChoice.fxml
+++ b/src/main/resources/ku/cs/aboutUsChoice.fxml
@@ -6,11 +6,11 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.shape.*?>
 
-<AnchorPane prefHeight="250.0" prefWidth="940.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.AboutUsChoiceController">
+<AnchorPane prefHeight="250.0" prefWidth="940.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.AdminInfoChoiceController">
    <children>
       <HBox prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <GridPane maxWidth="200.0" minWidth="200.0" onMouseClicked="#handleInfoClick" prefHeight="260.0" prefWidth="200.0">
+            <GridPane maxWidth="200.0" minWidth="200.0" prefHeight="260.0" prefWidth="200.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
