--- a/src/main/resources/ku/cs/adminInfoChoice.fxml
+++ b/src/main/resources/ku/cs/adminInfoChoice.fxml
@@ -1,26 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.paint.LinearGradient?>
-<?import javafx.scene.paint.Stop?>
-<?import javafx.scene.shape.Rectangle?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="651.0" prefWidth="940.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.AdminInfoChoiceController">
+<AnchorPane prefHeight="651.0" prefWidth="940.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.AdminInfoChoiceController">
     <children>
       <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
               <HBox maxHeight="250.0" minHeight="250.0" prefHeight="260.0" prefWidth="200.0">
                   <children>
-                      <GridPane maxWidth="200.0" minWidth="200.0" onMouseClicked="#handleChoiceClick" prefHeight="260.0" prefWidth="200.0">
+                      <GridPane maxWidth="200.0" minWidth="200.0" onMouseClicked="#handleChoice1Click" prefHeight="260.0" prefWidth="200.0">
                           <columnConstraints>
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                           </columnConstraints>
@@ -57,11 +50,23 @@
                                       </LinearGradient>
                                   </fill>
                               </Rectangle>
-                              <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1" />
+                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="F R E S H">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets top="5.0" />
+                                 </VBox.margin>
+                              </Text>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="สาวน้อยร้อยสามี" />
+                           </children>
+                        </VBox>
                           </children>
                       </GridPane>
                       <Pane minWidth="46.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: transparent;" HBox.hgrow="ALWAYS" />
-                      <GridPane maxWidth="200.0" minWidth="200.0" prefHeight="260.0" prefWidth="200.0">
+                      <GridPane maxWidth="200.0" minWidth="200.0" onMouseClicked="#handleChoice2Click" prefHeight="260.0" prefWidth="200.0">
                           <columnConstraints>
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                           </columnConstraints>
@@ -98,10 +103,23 @@
                                       </LinearGradient>
                                   </fill>
                               </Rectangle>
+                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="T O M T A M">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets top="5.0" />
+                                 </VBox.margin>
+                              </Text>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="มังกรน้อยคอยรัก" />
+                           </children>
+                        </VBox>
                           </children>
                       </GridPane>
                       <Pane minWidth="46.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: transparent;" HBox.hgrow="ALWAYS" />
-                      <GridPane maxWidth="200.0" minWidth="200.0" prefHeight="260.0" prefWidth="200.0">
+                      <GridPane maxWidth="200.0" minWidth="200.0" onMouseClicked="#handleChoice3Click" prefHeight="260.0" prefWidth="200.0">
                           <columnConstraints>
                               <ColumnConstraints />
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -139,10 +157,23 @@
                                       </LinearGradient>
                                   </fill>
                               </Rectangle>
+                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="K W A N">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets top="5.0" />
+                                 </VBox.margin>
+                              </Text>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="รักนะคนดี คนดีที่มีเงิน" />
+                           </children>
+                        </VBox>
                           </children>
                       </GridPane>
                       <Pane minWidth="46.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: transparent;" HBox.hgrow="ALWAYS" />
-                      <GridPane maxWidth="200.0" minWidth="200.0" prefHeight="260.0" prefWidth="200.0">
+                      <GridPane maxWidth="200.0" minWidth="200.0" onMouseClicked="#handleChoice4Click" prefHeight="260.0" prefWidth="200.0">
                           <columnConstraints>
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                           </columnConstraints>
@@ -179,6 +210,19 @@
                                       </LinearGradient>
                                   </fill>
                               </Rectangle>
+                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="F R I N C E">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets top="5.0" />
+                                 </VBox.margin>
+                              </Text>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="ทานตะวันหิวแสง" />
+                           </children>
+                        </VBox>
                           </children>
                       </GridPane>
                   </children>
