--- a/src/main/resources/ku/cs/subscene/information.fxml
+++ b/src/main/resources/ku/cs/subscene/information.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
 
-<AnchorPane prefHeight="371.0" prefWidth="940.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.InformationController">
+<AnchorPane prefHeight="371.0" prefWidth="940.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" >
    <children>
       <Rectangle fill="WHITE" height="371.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="940.0" />
    </children>
