--- a/src/main/resources/ku/cs/adminInfoChoice.fxml
+++ b/src/main/resources/ku/cs/adminInfoChoice.fxml
@@ -24,7 +24,7 @@
                           <children>
                               <ImageView fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                                   <image>
-                                      <Image url="@image/profile.jpg" />
+                                      <Image url="@image/fresh.png" />
                                   </image>
                               </ImageView>
                               <Rectangle height="50.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="200.0" GridPane.rowIndex="1">
@@ -77,7 +77,7 @@
                           <children>
                               <ImageView fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                                   <image>
-                                      <Image url="@image/profile.jpg" />
+                                      <Image url="@image/tam.png" />
                                   </image>
                               </ImageView>
                               <Rectangle height="50.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="200.0" GridPane.rowIndex="1">
@@ -131,7 +131,7 @@
                           <children>
                               <ImageView fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
                                   <image>
-                                      <Image url="@image/profile.jpg" />
+                                      <Image url="@image/kwan.png" />
                                   </image>
                               </ImageView>
                               <Rectangle height="50.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
@@ -184,7 +184,7 @@
                           <children>
                               <ImageView fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                                   <image>
-                                      <Image url="@image/profile.jpg" />
+                                      <Image url="@image/frince.png" />
                                   </image>
                               </ImageView>
                               <Rectangle height="50.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="200.0" GridPane.rowIndex="1">
