--- a/src/main/resources/ku/cs/login.fxml
+++ b/src/main/resources/ku/cs/login.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: BC986A;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.LoginController">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: BC986A;" stylesheets="@style/PrimaryTheme.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.LoginController">
    <children>
       <Rectangle arcHeight="10.0" arcWidth="10.0" fill="#fffae9" height="338.0" layoutX="-7.0" layoutY="430.0" stroke="#fffae9" strokeType="INSIDE" width="1050.0" />
       <QuadCurve controlX="54.26666259765625" controlY="-129.99998474121094" endX="155.13330078125" endY="-6.66668701171875" fill="#fffae9" layoutX="62.0" layoutY="448.0" startX="-83.80001831054688" startY="-16.26666259765625" stroke="#fffae9" strokeType="INSIDE" />
@@ -20,26 +20,14 @@
       <QuadCurve controlX="41.79998779296875" controlY="-98.33331298828125" endX="113.933349609375" endY="-34.333343505859375" fill="#fffae9" layoutX="472.0" layoutY="473.0" startX="-65.3333740234375" startY="-30.066680908203125" stroke="#fffae9" strokeType="INSIDE" />
       <QuadCurve controlX="2.066650390625" controlY="61.4666748046875" endX="113.0" endY="-7.999969482421875" fill="#bc986a" layoutX="930.0" layoutY="438.0" startX="-84.06668090820312" startY="-21.4666748046875" stroke="#bc986a" strokeType="INSIDE" />
       <Rectangle arcHeight="10.0" arcWidth="10.0" fill="WHITE" height="576.0" layoutX="573.0" layoutY="100.0" stroke="WHITE" strokeType="INSIDE" width="386.0" />
-      <Label layoutX="713.0" layoutY="126.0" text="เข้าสู่ระบบ">
-         <font>
-            <Font name="JasmineUPC Bold" size="30.0" />
-         </font>
+      <Label layoutX="713.0" layoutY="126.0" styleClass="root" text="เข้าสู่ระบบ">
       </Label>
       <Line endX="134.933349609375" layoutX="770.0" layoutY="164.0" startX="-137.066650390625" />
-      <Label layoutX="591.0" layoutY="222.0" text="ชื่อผู้ใช้">
-         <font>
-            <Font name="JasmineUPC" size="24.0" />
-         </font>
+      <Label layoutX="583.0" layoutY="200.0" styleClass="root" stylesheets="@style/PrimaryTheme.css" text="ชื่อผู้ใช้">
       </Label>
-      <Label layoutX="591.0" layoutY="325.0" text="รหัสผ่าน">
-         <font>
-            <Font name="JasmineUPC" size="24.0" />
-         </font>
+      <Label layoutX="589.0" layoutY="318.0" styleClass="root" text="รหัสผ่าน">
       </Label>
       <TextField fx:id="usernameTextField" layoutX="586.0" layoutY="248.0" prefHeight="55.0" prefWidth="358.0" promptText="กรอกชื่อผู้ใช้ของคุณ" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;">
-         <font>
-            <Font name="JasmineUPC" size="20.0" />
-         </font>
       </TextField>
       <Button layoutX="699.0" layoutY="466.0" mnemonicParsing="false" onAction="#handleLoginButton" prefHeight="52.0" prefWidth="127.0" style="-fx-background-color: B78748; -fx-background-radius: 20;" text="เข้าสู่ระบบ" textAlignment="CENTER" textFill="WHITE">
          <font>
@@ -60,9 +48,6 @@
          </font></Button>
       <Line endX="-100.0" endY="18.93328857421875" layoutX="868.0" layoutY="632.0" startX="-100.0" />
       <Label layoutX="835.0" layoutY="41.0" text="|   PROMOTION" textFill="WHITE">
-         <font>
-            <Font name="JasmineUPC Bold" size="28.0" />
-         </font>
       </Label>
       <ImageView fitHeight="88.0" fitWidth="74.0" layoutX="12.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -79,7 +64,7 @@
             <Font name="JasmineUPC" size="25.0" />
          </font>
       </Button>
-      <Button layoutX="704.0" layoutY="30.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="136.0" onAction="#handleToAboutUsButton" style="-fx-background-color: BC986A;" text="ABOUT US" textFill="WHITE">
+      <Button layoutX="602.0" layoutY="24.0" mnemonicParsing="false" onAction="#handleToAboutUsButton" prefHeight="57.0" prefWidth="222.0" style="-fx-background-color: BC986A;" styleClass="root" stylesheets="@style/PrimaryTheme.css" text="ABOUT US" textFill="WHITE">
          <font>
             <Font name="JasmineUPC Bold" size="28.0" />
          </font>
