--- a/src/main/resources/ku/cs/pageBookCartoon.fxml
+++ b/src/main/resources/ku/cs/pageBookCartoon.fxml
@@ -1,20 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-
-
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.text.Font?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.LoginController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fffcf1" height="315.0" layoutX="71.0" layoutY="113.0" stroke="#eccece" strokeType="OUTSIDE" width="260.0" />
@@ -137,7 +133,7 @@
          </image>
       </ImageView>
       <Button layoutX="521.0" layoutY="24.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="143.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" />
-      <Label fx:id="userName" layoutX="544.0" layoutY="32.0" text="username" textFill="WHITE">
+      <Label fx:id="userName" layoutX="535.0" layoutY="27.0" styleClass="root" stylesheets="@style/PrimaryTheme.css" text="username" textFill="WHITE">
          <font>
             <Font name="JasmineUPC" size="38.0" />
          </font>
